@@ -10,6 +10,11 @@ the following changes:
       specific machine. Therefore artifacts such as execution time, previously
       catagorized specially as 'result' metrics, are just another
       nondeterministic metric.
+    * Removal of the Execution API object. This was used to allow for data from
+      multiple sources to be joined in the creation of a single Trial. This
+      distinction is a function of the application code, not of the database,
+      and is being removed for clarity. Any merging of separate sources will
+      need to be handled on an application basis.
 
 Version 2.1
 -----------
